--- a/CGMH-Bootstrap-DEMO/pure-html-dmeo.html
+++ b/CGMH-Bootstrap-DEMO/pure-html-dmeo.html
@@ -2,12 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title>Bootstrap Demo</title>
+        <title>純HTML網頁範例</title>
         <link href="Content/bootstrap.min.css" rel="stylesheet" />
         <script src="Scripts/jquery-1.9.1.min.js"></script>
     </head>
     <body>
-        <div class="container"></div>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <img alt="長庚紀念醫院" src="Images/CGMH.png" />
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" id="navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">按鈕</a></li>
+                        <li><a href="#">網格系統</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <script src="Scripts/bootstrap.min.js"></script>
     </body>
 </html>
