--- a/CGMH-Bootstrap-DEMO/pure-html/pure-html-dmeo.html
+++ b/CGMH-Bootstrap-DEMO/pure-html/pure-html-dmeo.html
@@ -32,7 +32,7 @@
                             其他版本DEMO <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">ASP.NET Web Form</a></li>
+                            <li><a href="../web-form/web-form-demo.aspx">ASP.NET Web Form</a></li>
                             <li><a href="#">ASP.NET MVC</a></li>
                         </ul>
                     </li>
