--- a/CGMH-Bootstrap-DEMO/pure-html/pure-html-dmeo.html
+++ b/CGMH-Bootstrap-DEMO/pure-html/pure-html-dmeo.html
@@ -52,13 +52,13 @@
             <li>簡報：</li>
             <li>
                 原始碼：
-                <a href="https://github.com/kcwang-tw/cgmh-bootstrap-tutorial" target=_new>
+                <a href="https://github.com/kcwang-tw/cgmh-bootstrap-tutorial" target="_new">
                     https://github.com/kcwang-tw/cgmh-bootstrap-tutorial
                 </a>
             </li>
             <li>
                 更多進階應用請直接參考官方文件
-                <a href="http://getbootstrap.com/" target=_new>
+                <a href="http://getbootstrap.com/" target="_new">
                     http://getbootstrap.com/
                 </a>
             </li>
