Add slides link

--- a/CGMH-Bootstrap-DEMO/pure-html/pure-html-dmeo.html
+++ b/CGMH-Bootstrap-DEMO/pure-html/pure-html-dmeo.html
@@ -49,7 +49,12 @@
             <li>您現在使用的是純HTML版本Demo</li>
             <li>於電腦版操作時可調整瀏覽器大小來觀看不同解析度產生的效果</li>
             <li>可點選其他版本DEMO來觀看Bootstrap套用在純HTML網頁、Web Form與MVC的範例</li>
-            <li>簡報：</li>
+            <li>
+                簡報：
+                <a href="https://www.slideshare.net/secret/kvXxxvYaSlzChb" target="_new">
+                    https://www.slideshare.net/secret/kvXxxvYaSlzChb
+                </a>
+            </li>
             <li>
                 原始碼：
                 <a href="https://github.com/kcwang-tw/cgmh-bootstrap-tutorial" target="_new">
